@@ -1,3 +1,9 @@
+2001-07-31  Christian Iseli  <chris@ludwig-alpha.unil.ch>
+
+	* Makefile.in: Rebuilt.
+	* Makefile.am (GCJLINK): Added --tag=GCJ.
+	(LIBLINK): Likewise.
+
 2001-07-29  Mark Wielaard  <mark@klomp.org>
 
 	* HACKING: New documentation file.
